--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ env:
   CARGO_TERM_COLOR: always
   SOURCE_PATH: "./src"
   TRUNK_VERSION: "0.16.0"
+  TAURI_CLI_VERSION: "1.0.2"
 
 jobs:
   tauri-build:
@@ -37,6 +38,9 @@ jobs:
         with:
           working-directory: ${{ env.SOURCE_PATH }}
           cache-on-failure: true
+          key: |
+            Trunk:${{ env.TRUNK_VERSION }}
+            Tauri-CLI:${{ env.TAURI_CLI_VERSION }}
       - name: Install webkit/GTK dependencies (Linux)
         if: runner.os == 'Linux'
         run: |
@@ -52,7 +56,7 @@ jobs:
       - name: Install Trunk
         run: cargo install --locked trunk --version ${{ env.TRUNK_VERSION }}
       - name: Install Tauri
-        run: cargo install tauri-cli --locked --version 1.0.2
+        run: cargo install tauri-cli --locked --version ${{ env.TAURI_CLI_VERSION }}
 
       - name: Windows CMD workaround
         run: trunk build --release --dist "./../src-tauri/websrc"
