--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,39 @@ env:
   TAURI_CLI_VERSION: "1.0.3"
 
 jobs:
+  tauri-release-config:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: false
+          path: ${{ env.SOURCE_PATH }}
+      - name: Install jq
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: |
+          sudo apt-get -y update
+          sudo apt-get -y install jq
+      - name: Populate tauri release configuration
+        if: startsWith(github.ref, 'refs/tags/v')
+        shell: bash
+        run: >
+          jq
+          --null-input
+          --arg version "${GITHUB_REF##*/v}"
+          -f release.conf.jq
+          > "${{ GITHUB_WORKSPACE }}/tauri.release.conf.json"
+        working-directory: ${{ env.SOURCE_PATH }}/src-tauri
+      - name: Create empty tauri release configuration
+        if: startsWith(github.ref, 'refs/tags/v') != true
+        shell: bash
+        run: echo "{}" > "${{ GITHUB_WORKSPACE }}/tauri.release.conf.json"
+      - uses: actions/upload-artifact@v3
+        with:
+          name: tauri.release.conf.json
+          path: "${{ GITHUB_WORKSPACE }}/tauri.release.conf.json"
+
   tauri-build:
+    needs: [ tauri-release-config ]
     strategy:
       fail-fast: false
       matrix:
@@ -60,8 +92,13 @@ jobs:
         run: trunk build --release --dist "./../src-tauri/websrc"
         if: runner.os == 'Windows'
         working-directory: "${{ env.SOURCE_PATH }}/cube_shuffle-wasm"
+      - name: Download release configuration
+        uses: actions/download-artifact@v3
+        with:
+          name: tauri.release.conf.json
+          path: "${{ env.SOURCE_PATH }}/src-tauri"
       - name: Tauri Build
-        run: cargo tauri build ${{ runner.os == 'macOS' && '--target universal-apple-darwin' || '' }} || true
+        run: cargo tauri build ${{ runner.os == 'macOS' && '--target universal-apple-darwin' || '' }} --config "./tauri.release.conf.json"
         working-directory: "${{ env.SOURCE_PATH }}/src-tauri"
 
       - uses: actions/upload-artifact@v3
@@ -366,7 +403,7 @@ jobs:
           sudo apt-get -y install jq
       - name: Make update json
         run: |
-          jq -n \
+          jq --null-input \
           --arg version "${GITHUB_REF##*/v}" \
           --arg tag_version "${GITHUB_REF##*/}" \
           --arg now `date --iso-8601=ns` \
