Replace beevelop/cordova:latest with cimg/android:2022.09.2-node

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -277,12 +277,14 @@ jobs:
 
   cordova-build:
     container:
-      image: beevelop/cordova:latest
+      image: cimg/android:2022.09.2-node
     runs-on: ubuntu-latest
     needs: [ wasm-build ]
     steps:
       - name: Install Git
         run: apt-get -y update && apt-get -y install git
+      - name: Install cordova
+        run: npm install -g cordova
       - uses: actions/checkout@v3
         with:
           submodules: 'recursive'
