--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -282,9 +282,9 @@ jobs:
     needs: [ wasm-build ]
     steps:
       - name: Install Git
-        run: apt-get -y update && apt-get -y install git
+        run: sudo apt-get -y update && sudo apt-get -y install git
       - name: Install cordova
-        run: npm install -g cordova
+        run: sudo npm install -g cordova
       - uses: actions/checkout@v3
         with:
           submodules: 'recursive'
