Install Android build tools for cordova-build.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -284,6 +284,8 @@ jobs:
     steps:
       - name: Install cordova
         run: npm install -g cordova
+      - name: Install Android build tools
+        run: sdkmanager "build-tools;30.0.3"
       - uses: actions/checkout@v3
         with:
           submodules: 'recursive'
