Fix CLI version input parameter name.

--- a/.github/workflows/tauri-linux-build.yml
+++ b/.github/workflows/tauri-linux-build.yml
@@ -6,7 +6,7 @@ on:
       TRUNK_VERSION:
         required: true
         type: string
-      TAURI_VERSION:
+      TAURI_CLI_VERSION:
         required: true
         type: string
 
